# digital_thermometer_controller

./: Cargo.toml  README.adoc  rustc-ice-2025-03-25T11_42_04-78581.txt
src/: _main.rs  _mqtt.rs  _ntp.rs  deadline.rs  main.rs  modbus copy 2.rs  modbus copy.rs  modbus.rs  tcp.rs  temperature.rs  wifi.rs
